Mobile alignment fix

--- a/pathology-theme/sass/_layout.scss
+++ b/pathology-theme/sass/_layout.scss
@@ -50,6 +50,7 @@ article {
       font-weight: bold;
     }
 
+    text-align: center;
     margin-top: -1px;
     padding: 1em 1em 1.5em 1em;
     background-color: $primary;
